--- a/examples/hiera/kibana.yaml
+++ b/examples/hiera/kibana.yaml
@@ -1,4 +1,4 @@
 # Apply to a server where to install the Kibana frontent
 ---
-  stack::logstash::kibana_install: true
+  stack_logstash::kibana_install: true
 
